# file_clipper

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  errors.rs  exceptions.rs  file_handler.rs  files.rs  main.rs  models.rs  record_handler.rs  records.rs  test_helpers.rs  tui.rs  utils.rs
