[package]
name = "file_clipper"
version = "0.1.3"
edition = "2024"
authors = ["Rui Jiang me@ruijiang.me"]
license = "MIT"
description = "A command-line utility that provides intuitive and efficient file management capabilities, mimicking the familiar “copy,” “cut,” and “paste” operations found in graphical user interfaces."
readme = "README.md"
repository = "https://github.com/ruiiiijiiiiang/file_clipper"
keywords = ["cli", "file-management", "copy", "paste", "tui"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["./assets"]

[[bin]]
name = "clp"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
toml = "0.9.5"
chrono = "0.4.40"
serde_with = "3.12.0"
strum_macros = "0.27.1"
thiserror = "2.0.12"
color-eyre = "0.6.5"
glob = "0.3.2"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
text_io = "0.1.13"
clap_complete = "4.5.58"
dircpy = "0.3.19"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
