[package]
name = "file_clipper"
version = "0.1.4"
edition = "2024"
authors = ["Rui Jiang me@ruijiang.me"]
license = "MIT"
description = "A command-line utility that provides intuitive and efficient file management capabilities, mimicking the familiar “copy,” “cut,” and “paste” operations found in graphical user interfaces."
readme = "README.md"
repository = "https://github.com/ruiiiijiiiiang/file_clipper"
keywords = ["cli", "file-management", "copy", "paste", "tui"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["./assets"]

[[bin]]
name = "clp"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
toml = "1.1"
chrono = "0.4"
serde_with = "3.20"
strum_macros = "0.28"
thiserror = "2.0"
color-eyre = "0.6"
glob = "0.3"
clap = { version = "4.5", features = ["derive", "cargo"] }
text_io = "0.1"
clap_complete = "4.6"
dircpy = "0.3"
dirs = "6.0"

[dev-dependencies]
serial_test = "3.4"
tempfile = "3.27"
